tests/snapshots/run_wpt_conformance__litert_conv2d_float16_4D_input_and_filter_tensors_options_filterLayout__oihw_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D input and filter tensors options.filterLayout='oihw', litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f16[2, 1, 3, 3];
  }

  consts {
    operand_0: f16[3, 1, 2, 2] @bytes([167, 48, 189, 59, 239, 46, 32, 53, 144, 57, 15, 56, 54, 45, 62, 56, 234, 52, 235, 54, 225, 59, 218, 54]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_0, bias=null, dilations=[], filterLayout="oihw", groups=1, inputLayout="", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
